apps/authority/authority-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authority-deployment
  namespace: authority
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authority
  template:
    metadata:
      labels:
        app: authority
    spec:
      containers:
      - name: authority
        image: authority
        ports:
        - containerPort: 8080
