apps/authority/authority-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority-vs
  namespace: authority
spec:
  hosts:
  - authority.cb-interview.com
  gateways:
  - authority-gateway
  http:
  - route:
    - destination:
        host: authority-deployment.authority.svc.cluster.local
        port:
          number: 8080
